syntax = "proto3";
package broadcast;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum OP {
  UNKNOWN = 0;
  BLOCKS_REQUEST = 1;
  LISTING = 2;
}

message Block {
  uint64 node = 1;
  uint64 number = 2;
  repeated Entry entries = 3;
  bytes previous = 4;
}

message BlockReference {
  uint64 node = 1;
  uint64 number = 2;
  bytes hash = 3;
}

message BlocksRequest { repeated BlockReference blocks = 1; }

message Entry {
  oneof value {
    BlockReference block = 1;
    TransactionData transaction = 2;
  }
}

message Listing { repeated SignedBlock blocks = 1; }

message SignedBlock {
  bytes data = 1;
  bytes signature = 2;
}

message TransactionData {
  bytes data = 1;
  uint64 fee = 2;
}
